assets/styles/global.css
/* Global CSS for all pages */

.top-5 {
  top: 5%;
}

#btn-logout:hover {
  background-color: #e4ad0b;
}

#btn-back-to-top {
  position: fixed;
  bottom: 20px;
  right: 20px;
  display: none;
}

.btn-delete:hover {
  opacity: 0.7;
}

iframe{
  width: 100%;
  height: 100%;
}

.image-size img{
  width: 100%;
  height: 100%;
}

